css/home.css
.full-height > .jumbotron {
  height: 800px;
  max-height: 1024px;
  min-height: 400px;
  padding: 0;
	margin: 0;
}

.full-height > .jumbotron > div {
  background-size: cover;
  background-position: center bottom;
  height: inherit;
  width: 100%;
  max-height: 1024px;
  min-height: 400px;
  position: absolute;
}

header.full-height > .jumbotron {
  position: relative;
}

header #six {
  background-image: url(../images/gch/title.png);
  z-index: 6;
}
header #five {
  background-image: url(../images/gch/layer0.png);
  z-index: 5;
}

header #four {
  background-image: url(../images/gch/sitterson.png);
  z-index: 4;
}
header #three {
  background-image: url(../images/gch/layer1.png);
  z-index: 3;
}

header #two {
  background-image: url(../images/gch/layer2.png);
  z-index: 2;
  /*margin-top: -60px;*/
}

header #one {
  background-image: url(../images/gch/layer3.png);
  z-index: 1;
  /*margin-top: -100px;*/
}

header #zero {
	background-color: rgb(235, 222, 222);
  z-index: 1;
}

#invitation {
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
  font-size: 1rem;
  font-family: ArcherBook;
}

div#content.container
{
  margin-top: 0px;
}

#invitation p
{
  margin: 0 0 2px;
}

#invitation .big {
  font-size: 2rem;
}

#invitation .btn
{
  background-color: #CC2557;
}

#invitation .col-xs-8, #invitation .col-xs-offset-2 {
  float: none;
}

#invitation img:first-child {
  margin-bottom: -10%;
}

#invitation img {
  width: 80%;
  margin: auto;
}

#invitation img:last-child {
  margin-top: -15%;
}

#invitation .content {
  padding-top: 5px;
  padding-bottom: 5px;
}

.jumbotron {
  background-color: #FFF;
	background-color: rgba(255, 255, 255, 0.25);
}

#mlh-trust-badge {
	position: absolute;
	top: 0;
  right: 25px;
  max-width: 80px;
	width: 10%;
	min-width: 60px;
  z-index: 4;
}

#nav.affix {
	top: 0;
	border-width: 0 0 1px;
	position: fixed;
	right: 0;
	left: 0;
	z-index: 1030;
}

#welcome p {
  font-size: 1.1em;
}

.panel-body
{
  font-size: 1.6rem;

}

